--- a/BeamWallet/Controls/Cell/BMMultiLinesCell.xib
+++ b/BeamWallet/Controls/Cell/BMMultiLinesCell.xib
@@ -60,6 +60,7 @@
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ovQ-XA-6WJ">
                                                 <rect key="frame" x="250" y="0.0" width="40" height="22"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="40" id="DNX-nm-i0x"/>
                                                 </constraints>
