--- a/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionSearchCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Cells/WalletTransactionSearchCell.xib
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="SF-Pro-Display-Light.otf">
             <string>SFProDisplay-Light</string>
-        </array>
-        <array key="SF-Pro-Display-LightItalic.otf">
-            <string>SFProDisplay-LightItalic</string>
         </array>
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
@@ -28,17 +25,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="176" id="dJk-P7-faZ" customClass="WalletTransactionSearchCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="196"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dJk-P7-faZ" id="pl9-lL-6Rl">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="196"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nbc-pK-Hen">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="176"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="196"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="XoC-BK-pCX">
-                                <rect key="frame" x="56" y="18" width="249" height="138"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="XoC-BK-pCX">
+                                <rect key="frame" x="56" y="18" width="249" height="110"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="cNQ-Pt-4kr">
                                         <rect key="frame" x="0.0" y="0.0" width="249" height="19.5"/>
@@ -62,7 +59,7 @@
                                         </subviews>
                                     </stackView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Teb-8G-KHD">
-                                        <rect key="frame" x="0.0" y="24.5" width="249" height="22"/>
+                                        <rect key="frame" x="0.0" y="22.5" width="249" height="22"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-received-max-privacy-offline" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rTO-D8-HKk">
                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="22"/>
@@ -89,23 +86,14 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FJZ-bc-UOu">
-                                        <rect key="frame" x="0.0" y="51.5" width="249" height="86.5"/>
+                                        <rect key="frame" x="0.0" y="47.5" width="249" height="62.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wxS-xa-XrJ">
-                                                <rect key="frame" x="0.0" y="5" width="249" height="81.5"/>
+                                                <rect key="frame" x="0.0" y="5" width="249" height="57.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12 Jun 2018   |   3:46 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yMx-9W-PKg">
-                                                        <rect key="frame" x="0.0" y="0.0" width="249" height="54.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="249" height="57.5"/>
                                                         <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="12"/>
-                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <nil key="highlightedColor"/>
-                                                        <userDefinedRuntimeAttributes>
-                                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                                        </userDefinedRuntimeAttributes>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="&quot;comment&quot;" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIn-5S-Clg">
-                                                        <rect key="frame" x="0.0" y="64.5" width="249" height="17"/>
-                                                        <fontDescription key="fontDescription" name="SFProDisplay-LightItalic" family="SF Pro Display" pointSize="14"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                         <userDefinedRuntimeAttributes>
@@ -126,6 +114,15 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="&quot;comment&quot;" textAlignment="natural" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIn-5S-Clg">
+                                <rect key="frame" x="15" y="159" width="290" height="17"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WO9-4s-a5K" customClass="AssetIconView" customModule="BeamWallet" customModuleProvider="target">
                                 <rect key="frame" x="15" y="15" width="26" height="26"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -134,15 +131,28 @@
                                     <constraint firstAttribute="width" constant="26" id="glT-HP-HUb"/>
                                 </constraints>
                             </view>
+                            <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6AI-On-t8U">
+                                <rect key="frame" x="15" y="143" width="290" height="1"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="UJh-Lu-M7f"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="XoC-BK-pCX" firstAttribute="leading" secondItem="WO9-4s-a5K" secondAttribute="trailing" constant="15" id="2dq-2k-dog"/>
                             <constraint firstItem="WO9-4s-a5K" firstAttribute="top" secondItem="Nbc-pK-Hen" secondAttribute="top" constant="15" id="98X-IS-fKd"/>
+                            <constraint firstItem="qIn-5S-Clg" firstAttribute="leading" secondItem="Nbc-pK-Hen" secondAttribute="leading" constant="15" id="Ag2-MT-pwM"/>
                             <constraint firstItem="XoC-BK-pCX" firstAttribute="top" secondItem="Nbc-pK-Hen" secondAttribute="top" constant="18" id="GMq-Mx-ha6"/>
+                            <constraint firstItem="6AI-On-t8U" firstAttribute="leading" secondItem="Nbc-pK-Hen" secondAttribute="leading" constant="15" id="LMV-tU-pNW"/>
+                            <constraint firstItem="qIn-5S-Clg" firstAttribute="top" secondItem="6AI-On-t8U" secondAttribute="bottom" constant="15" id="U8n-aH-Sza"/>
+                            <constraint firstAttribute="trailing" secondItem="qIn-5S-Clg" secondAttribute="trailing" constant="15" id="a66-W5-9fG"/>
+                            <constraint firstAttribute="bottom" secondItem="qIn-5S-Clg" secondAttribute="bottom" constant="20" id="eeE-6J-X9L"/>
                             <constraint firstAttribute="trailing" secondItem="XoC-BK-pCX" secondAttribute="trailing" constant="15" id="lIX-yr-Xtr"/>
+                            <constraint firstAttribute="trailing" secondItem="6AI-On-t8U" secondAttribute="trailing" constant="15" id="qdq-cT-HzW"/>
                             <constraint firstItem="WO9-4s-a5K" firstAttribute="leading" secondItem="Nbc-pK-Hen" secondAttribute="leading" constant="15" id="tEA-2y-wlq"/>
-                            <constraint firstAttribute="bottom" secondItem="XoC-BK-pCX" secondAttribute="bottom" constant="20" id="xcw-3u-0eD"/>
+                            <constraint firstItem="6AI-On-t8U" firstAttribute="top" secondItem="XoC-BK-pCX" secondAttribute="bottom" constant="15" id="uEq-Kz-Sdx"/>
                         </constraints>
                     </view>
                 </subviews>
