--- a/BeamWallet/ViewControllers/Main/Passwords/UnlockPasswordPopover.xib
+++ b/BeamWallet/ViewControllers/Main/Passwords/UnlockPasswordPopover.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,6 +23,7 @@
                 <outlet property="mainView" destination="wTS-V4-pfR" id="UmR-B0-VdC"/>
                 <outlet property="passField" destination="AVa-L4-vq8" id="GzS-gH-Y1H"/>
                 <outlet property="touchIdButton" destination="LLf-oV-Bd8" id="sR0-H4-Ss0"/>
+                <outlet property="unlockButton" destination="2rk-va-DUb" id="g8s-NR-k0d"/>
                 <outlet property="view" destination="zZr-vH-VHx" id="cVs-sK-FDY"/>
             </connections>
         </placeholder>
